Bug 221719 Disable Composer's Paste As Quotation menuitem in the subject and address fields r=brade sr=alecf